--- a/static/login.html
+++ b/static/login.html
@@ -9,25 +9,28 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Games</a></li>
-            <li><a href="about.html">About</a></li>
-            <li style="float:right;"><a href="#">Deposit</a></li>
-            <li style="float:right;"><a href="login.html">Login</a></li>
-          </ul>
-          <img class="logo" src="logo2.png">
-    </div>  
-    <div id="logincontainer">
-        <h1 style="text-align: center; font-size: 50px;">Login</h1>
-        <label for="username">Username:</label><br>
-        <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="text" id="fname" name="username"><br><br>
-        <label for="password">Password:</label><br>
-        <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="password" id="lname" name="password"><br><br>
-        <input style="background-color: #7a7aa7; border-style: none; color:white; padding: 10px 20px;" type="submit" value="Login">
-        <br>
-        <br>    
-    </div>
+<div class="navbar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#">Games</a></li>
+        <li><a href="about.html">About</a></li>
+        <li style="float:right;"><a href="#">Deposit</a></li>
+        <li style="float:right;"><a href="login.html">Login</a></li>
+    </ul>
+    <img class="logo" src="logo2.png">
+</div>
+<div id="logincontainer">
+    <h1 style="text-align: center; font-size: 50px;">Login</h1>
+    <label for="username">Username:</label><br>
+    <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="text"
+           id="fname" name="username"><br><br>
+    <label for="password">Password:</label><br>
+    <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="password"
+           id="lname" name="password"><br><br>
+    <input style="background-color: #7a7aa7; border-style: none; color:white; padding: 10px 20px;" type="submit"
+           value="Login">
+    <br>
+    <br>
+</div>
 </body>
 </html>
