--- a/static/login.html
+++ b/static/login.html
@@ -23,10 +23,10 @@
     <h1 style="text-align: center; font-size: 50px;">Login</h1>
     <label for="username">Username:</label><br>
     <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="text"
-           id="fname" name="username"><br><br>
+           id="username" name="username"><br><br>
     <label for="password">Password:</label><br>
     <input style="background-color: #7a7aa7; border-style: none; color: white; font-family: 'DM Mono';" type="password"
-           id="lname" name="password"><br><br>
+           id="password" name="password"><br><br>
     <input style="background-color: #7a7aa7; border-style: none; color:white; padding: 10px 20px;" type="submit"
            value="Login">
     <br>
