--- a/static/roulette.html
+++ b/static/roulette.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=DM Mono' rel='stylesheet'>
-    <title>Games</title>
+    <title>Roulette</title>
     <link rel="stylesheet" href="gamesstyle.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
 </head>
 <body>
 <div class="navbar">
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Games</a></li>
+        <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About</a></li>
         <li style="float:right;"><a href="#">Deposit</a></li>
         <li style="float:right;"><a href="login.html">Login</a></li>
@@ -20,19 +22,8 @@
     <img class="logo" src="logo2.png">
 </div>
 
-<div id="container">
-    <a href="blackjack.html" style="text-align: center;"><img src="Blackjack.svg" alt="blackjack"></a>
-    <p>Blackjack</p>
-</div>
-<div id="container2">
-    <a href="roulette.html" style="text-align: center;"><img src="Roulette.svg" alt="blackjack"></a>
-    <p>Roulette</p>
-</div>
-</div>
+<script src="animation.js"></script>
+<script src="roulette.js"></script>
+
 </body>
-<footer style="position: fixed;">
-    <div class="footer">
-        © 2024 Hadmoney. All Rights Reserved.
-    </div>
-</footer>
 </html>
