add account system

--- a/static/games.html
+++ b/static/games.html
@@ -9,16 +9,19 @@
     <link rel="stylesheet" href="gamesstyle.css">
 </head>
 <body>
+<!-- Navbar start -->
 <div class="navbar">
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Games</a></li>
+        <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About</a></li>
-        <li style="float:right;"><a href="#">Deposit</a></li>
-        <li style="float:right;"><a href="login.html">Login</a></li>
+        <li style="float:right;"><a href="#" id="profile">Profile</a></li>
+        <li style="float:right;"><a id="registerBtn" href="register.html">Register</a></li>
+        <li style="float:right;"><a id="loginBtn" href="login.html">Login</a></li>
     </ul>
     <img class="logo" src="logo2.png">
 </div>
+<!-- Navbar end -->
 
 <div id="container">
     <a href="blackjack.html" style="text-align: center;"><img src="Blackjack.svg" alt="blackjack"></a>
@@ -28,7 +31,7 @@
     <a href="roulette.html" style="text-align: center;"><img src="Roulette.svg" alt="blackjack"></a>
     <p>Roulette</p>
 </div>
-</div>
+<script src="auth.js"></script>
 </body>
 <footer style="position: fixed;">
     <div class="footer">
