--- a/static/about.html
+++ b/static/about.html
@@ -9,17 +9,19 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
+<!-- Navbar start -->
 <div class="navbar">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
-        <li><a href="#">About</a></li>
-        <li style="float:right;"><a href="#">Deposit</a></li>
-        <li style="float:right;"><a href="login.html">Login</a></li>
+        <li><a href="about.html">About</a></li>
+        <li style="float:right;"><a href="#" id="profile">Profile</a></li>
+        <li style="float:right;"><a id="registerBtn" href="register.html">Register</a></li>
+        <li style="float:right;"><a id="loginBtn" href="login.html">Login</a></li>
     </ul>
+    <img class="logo" src="logo2.png">
 </div>
-<img class="logo" src="logo2.png">
-</div>
+<!-- Navbar end -->
 <div class="fade-in">
     <h1>About HadMoney.com</h1>
     Welcome to HadMoney.com, your ultimate destination for entertainment, insights, and opportunities in the world of
