--- a/static/blackjack.html
+++ b/static/blackjack.html
@@ -11,16 +11,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
 </head>
 <body>
+<!-- Navbar start -->
 <div class="navbar">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="games.html">Games</a></li>
         <li><a href="about.html">About</a></li>
-        <li style="float:right;"><a href="#">Deposit</a></li>
-        <li style="float:right;"><a href="login.html">Login</a></li>
+        <li style="float:right;"><a href="#" id="profile">Profile</a></li>
+        <li style="float:right;"><a id="registerBtn" href="register.html">Register</a></li>
+        <li style="float:right;"><a id="loginBtn" href="login.html">Login</a></li>
     </ul>
     <img class="logo" src="logo2.png">
 </div>
+<!-- Navbar end -->
 
 <div class="buttons">
     <button onclick="g_hit()">Hit</button>
@@ -29,8 +32,8 @@
     <button onclick="g_double()">Double</button>
 </div>
 
+<script src="auth.js"></script>
 <script src="animation.js"></script>
 <script src="blackjack.js"></script>
-</div>
 </body>
 </html>
