--- a/static/index.html
+++ b/static/index.html
@@ -12,19 +12,21 @@
 
 </head>
 <header>
-    <div class="navbar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="about.html">About</a></li>
-            <li style="float:right;"><a href="#">Deposit</a></li>
-            <li style="float:right;"><a href="login.html">Login</a></li>
-        </ul>
-    </div>
-    </div>
+    <!-- Navbar start -->
+<div class="navbar">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="games.html">Games</a></li>
+        <li><a href="about.html">About</a></li>
+        <li style="float:right;"><a href="#" id="profile">Profile</a></li>
+        <li style="float:right;"><a id="registerBtn" href="register.html">Register</a></li>
+        <li style="float:right;"><a id="loginBtn" href="login.html">Login</a></li>
+    </ul>
+    <img class="logo" src="logo2.png">
+</div>
+<!-- Navbar end -->
 </header>
 <body>
-<img class="logo" src="logo2.png">
 <div class="drop-in">
     <h1 style="text-align: center; font-size: 50px;">Bet Smart. Play Bold. Win Big.</h1>
 </div>
@@ -125,6 +127,7 @@
 <div class="theme">
     <img alt="kép">
 </div>
+<script src="auth.js"></script>
 </body>
 <footer style="position: fixed;">
     <div class="footer">
