Fix login button on homepage

--- a/static/index.html
+++ b/static/index.html
@@ -31,8 +31,7 @@
     <h1 style="text-align: center; font-size: 50px;">Bet Smart. Play Bold. Win Big.</h1>
 </div>
 <div class="nemtom">
-    <button type="button" class="loginbutton"><a href="login.html" style="color:white; text-decoration:none;">Login/Register</a>
-    </button>
+    <a href="login.html" style="color:white; text-decoration:none;"><button type="button" class="loginbutton">Login/Register</button></a>
     <p>All your gambling needs in one site.</p>
 </div>
 <img src="cards.svg" alt="Playing cards" class="cards">
