Putting credits on about page

--- a/static/about.html
+++ b/static/about.html
@@ -31,6 +31,9 @@
     <p>At HadMoney.com, our mission is simple: to deliver an unmatched gambling experience that blends top-notch gaming,
         cutting-edge technology, and a commitment to responsible play. We aim to create a trusted platform where players can
         enjoy their favorite games while having access to the resources and tools they need to make informed decisions.</p>
+
+    <h1>Our Team:</h1>
+    <p><b>Armand</b> - Functionality + JS Frontend <br><br>  <b>Nimród</b> - Design</p>
 </div>
     <h1>Why Choose HadMoney.com?</h1>
     <p><b>Variety of Games:</b> We offer a diverse selection of gambling options, from classic casino games like blackjack,
@@ -65,6 +68,7 @@
         need to have a great time.
     
         Thank you for choosing HadMoney.com—where the fun never stops and the winnings are just a click away!</p>
+    
 <br>
 <br>
 <script src="auth.js"></script>
