--- a/static/about.html
+++ b/static/about.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-<!-- Navbar start -->
 <div class="navbar">
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,7 +20,13 @@
     </ul>
     <img class="logo" src="logo2.png">
 </div>
-<!-- Navbar end -->
+<div class="dropdown">
+    <a class="dropbtn">Select Style</a>
+    <div class="dropdown-content">
+      <a href="#">Default</a>
+      <a href="#">Dark</a>
+    </div>  
+</div>
     <h1>About HadMoney.com</h1>
     <p>Welcome to HadMoney.com, your ultimate destination for entertainment, insights, and opportunities in the world of
         online gambling! Whether you're a seasoned player or a newcomer looking to explore the excitement of casinos, sports
