--- a/static/index.html
+++ b/static/index.html
@@ -24,9 +24,16 @@
     </ul>
     <img class="logo" src="logo2.png">
 </div>
-<!-- Navbar end -->
+    <!-- Navbar end -->
 </header>
 <body>
+ <div class="dropdown">
+        <a class="dropbtn">Select Style</a>
+        <div class="dropdown-content">
+          <a href="#">Default</a>
+          <a href="#">Dark</a>
+        </div>  
+</div>
 <div class="drop-in">
     <h1 style="text-align: center; font-size: 50px;">Bet Smart. Play Bold. Win Big.</h1>
 </div>
@@ -62,6 +69,7 @@
     </p>
 </div>
 <br>
+
 <table class="leaderboard" style="width: 14%;">
     <tr>
         <th colspan="2">Most Wins</th>
