--- a/static/register.html
+++ b/static/register.html
@@ -22,6 +22,13 @@
         <img class="logo" src="logo2.png">
     </div>
     <!-- Navbar end -->
+    <div class="dropdown">
+        <a class="dropbtn">Select Style</a>
+        <div class="dropdown-content">
+          <a href="#">Default</a>
+          <a href="#">Dark</a>
+        </div>  
+</div>
     <div id="logincontainer">
         <h1 style="text-align: center; font-size: 50px;">Register</h1>
         <label for="username">Username:</label><br>
