--- a/static/login.html
+++ b/static/login.html
@@ -21,6 +21,13 @@
         </ul>
         <img class="logo" src="logo2.png">
     </div>
+    <div class="dropdown">
+        <a class="dropbtn">Select Style</a>
+        <div class="dropdown-content">
+          <a href="#">Default</a>
+          <a href="#">Dark</a>
+        </div>  
+</div>
     <!-- Navbar end -->
     <div id="logincontainer">
         <h1 style="text-align: center; font-size: 50px;">Login</h1>
