Add redirect to roulette

--- a/static/games.html
+++ b/static/games.html
@@ -83,7 +83,8 @@
         if (localStorage.getItem("token") == null) {
             location.href = "/login.html";
         }
-        console.log(storedGameState.roulette);
+
+        location.href = '/roulette.html';
     }
 </script>
 </body>
