--- a/static/roulette.html
+++ b/static/roulette.html
@@ -7,8 +7,6 @@
     <link href='https://fonts.googleapis.com/css?family=DM Mono' rel='stylesheet'>
     <title>Roulette</title>
     <link rel="stylesheet" href="gamesstyle.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
 </head>
 <body>
     <!-- Navbar start -->
@@ -25,8 +23,21 @@
     </div>
     <!-- Navbar end -->
 
+    <script>
+        window.postAuth = () => {
+            const scripts = [
+                "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js",
+                "roulette.js"
+            ];
+
+            scripts.forEach(script => {
+                const tag = document.createElement("script");
+                tag.src = script;
+
+                document.body.appendChild(tag);
+            })
+        }
+    </script>
     <script src="auth.js"></script>
-    <script src="animation.js"></script>
-    <script src="roulette.js"></script>
 </body>
 </html>
