Adding a style to blackjack buttons

--- a/static/blackjack.html
+++ b/static/blackjack.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=DM Mono' rel='stylesheet'>
     <title>Blackjack</title>
-    <link rel="stylesheet" href="gamesstyle.css">
+    <link rel="stylesheet" href="blackjack.css">
 </head>
 <body>
 <!-- Navbar start -->
@@ -24,10 +24,10 @@
 <!-- Navbar end -->
 
 <div class="buttons">
-    <button onclick="g_hit()">Hit</button>
-    <button onclick="g_stand()">Stand</button>
-    <button onclick="g_split()">Split</button>
-    <button onclick="g_double()">Double</button>
+    <button  onclick="g_hit()">HIT</button>
+    <button  onclick="g_stand()">STAND</button>
+    <button  onclick="g_split()">SPLIT</button>
+    <button  onclick="g_double()">DOUBLE</button>
 </div>
 <script>
     window.postAuth = () => {
