--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
 </div>
 <div class="fade-in-3">
     <img class="fair" src="handshake.webp">
-    <p class="text3"><b>Fair</b><br><br>At HadMoney, sfairness is at the heart of everything we do. We use
+    <p class="text3"><b>Fair</b><br><br>At HadMoney, fairness is at the heart of everything we do. We use
         state-of-the-art random number generators (RNGs) and transparent algorithms to ensure that every game outcome is
         completely random and unbiased. Our games are regularly audited by independent third parties to maintain the
         highest standards of integrity and fairness. You can play with confidence, knowing that every bet and every spin
@@ -62,68 +62,6 @@
     </p>
 </div>
 <br>
-
-<table class="leaderboard" style="width: 14%;">
-    <tr>
-        <th colspan="2">Most Wins</th>
-    </tr>
-    <tr>
-        <td style="width: 50%;">nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-    <tr>
-        <td>nev</td>
-        <td>pont</td>
-    </tr>
-</table>
 <script src="auth.js"></script>
 </body>
 <footer style="position: fixed;">
